Fix buttons text not stacking on mobile. Fix page height too tall on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,4 +32,12 @@
     #showPass {
         height: 8em;
     }
+    #generatePass {
+        white-space: pre-wrap;
+    }
+
+    .display-4 {
+        font-size: 2.5rem;
+    }
+
 }
